@@ -5,7 +5,7 @@ Description: Missing the pretty pin-up girl posing in the header, this grunge ba
 Version: 1.9.3
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
-WordPress Required Version: 3.4
+WordPress Required Version: 4.1
 WordPress Tested Version: 4.4.2
 Tags: brown, orange, silver, tan, light, two-columns, right-sidebar, fixed-layout, threaded-comments, sticky-post, custom-menu, custom-background
 License: GNU General Public License v2
