@@ -2,6 +2,7 @@
 == Version 1.9.3 ==
 * Released February 2016
 * Update copyright year
+* Update required version to WordPress 4.1 (no sanity check)
 * Added `id` to sidebar widget definitions
 * Added sanity check before registering widgets
 * Added `screen-reader-text` required CSS definitions
